# flexera_dab

./: README.md  SETUP_GUIDE.md  databricks.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
configs/bronze/: customer_ingestion.yaml  orders_ingestion.yaml
configs/environments/: dev.env  prd.env  qa.env
configs/gold/: customer_360.yaml  daily_sales_summary.yaml
configs/silver/: customer_cleansed.yaml  orders_cleansed.yaml
notebooks/: runner.py
resources/: clusters.yml  jobs.yml
scripts/: build_wheel.sh  deploy.sh  promote_wheel.sh  replace_placeholders.sh
src/datalib/: __init__.py  _version.py  cli.py
src/datalib/core/: __init__.py  config.py  context.py  pipeline.py
src/datalib/io/: __init__.py  reader.py  writer.py
src/datalib/transformations/: __init__.py  base.py  common.py
src/datalib/utils/: __init__.py  logging.py  validators.py
tests/: conftest.py  test_config.py  test_transformations.py
